testsuite/tests/rename/should_fail/rnfail013.stderr
rnfail013.hs:7:11: error: [GHC-29916]
    Multiple declarations of ‘MkT’
    At: rnfail013.hs:7:11-18
        rnfail013.hs:5:11-17

